--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+		  <groupId>org.mockito</groupId>
+		  <artifactId>mockito-inline</artifactId>
+		  <scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.liquibase</groupId>
 			<artifactId>liquibase-core</artifactId>
 		</dependency>
