feat: Ajout de l'api de listing de tous les utilisateurs

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -44,6 +44,7 @@ springdoc:
 airfrance:
   api:
     user:
+      get-all: "/user"
       get: "/user/{username}"
       create: "/user"
       delete: "/user/{username}"
